--- a/manifests/manifest.yml
+++ b/manifests/manifest.yml
@@ -6,7 +6,7 @@ applications:
     - java_buildpack_offline
   env:
     DT_NODE_ID: APPNAME
-    DT_CUSTOM_PROP: DEPLOYMENT_GRP_NAME=SPRING-MUSIC-DTGRP DEPLOYMENT_COLOR=SPRING-MUSIC-APPCOLOR
-    DEPLOYMENT_GRP_NAME: SPRING-MUSIC-DTGRP
-    DELAY: 10000
+    DT_CUSTOM_PROP: DEPLOYMENT_GRP_NME=SPRING-MUSIC-DTGRP DEPLOYMENT_COLOR=SPRING-MUSIC-APPCOLOR
+    DEPLOYMENT_GRP_NME: SPRING-MUSIC-DTGRP
+    DELAY: 0
     incrementthistoforcenewrelease: 2
