trying to grab cf_instance_guid

--- a/manifests/manifest.yml
+++ b/manifests/manifest.yml
@@ -7,7 +7,7 @@ applications:
     - java_buildpack_offline
   env:
     DT_NODE_ID: APPNAME
-    DT_CUSTOM_PROP: DEPLOYMENT_GRP_NME=SPRING-MUSIC-DTGRP DEPLOYMENT_COLOR=SPRING-MUSIC-APPCOLOR
+    DT_CUSTOM_PROP: DEPLOYMENT_GRP_NME=SPRING-MUSIC-DTGRP DEPLOYMENT_COLOR=SPRING-MUSIC-APPCOLOR CF_INSTANCE_GUID=$$CF_INSTANCE_GUID
     DEPLOYMENT_GRP_NME: SPRING-MUSIC-DTGRP
     DELAY: 0
     incrementthistoforcenewrelease: 6
